// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing PostFooter Component can reply 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      onPress={[Function]}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;

exports[`Testing PostFooter Component contains page change callback 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;

exports[`Testing PostFooter Component contains share payload 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;

exports[`Testing PostFooter Component is in first page 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      disabled={true}
      onPress={null}
      transparent={true}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;

exports[`Testing PostFooter Component is in last page 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={true}
      onPress={null}
      transparent={true}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;

exports[`Testing PostFooter Component renders as expected 1`] = `
<Styled(Footer)>
  <Styled(FooterTab)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-left"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="refresh"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      disabled={false}
      transparent={false}
    >
      <Styled(Icon)
        name="comment-text-outline"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={[Function]}
    >
      <Styled(Icon)
        name="share-variant"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
    <Styled(Button)
      onPress={null}
    >
      <Styled(Icon)
        name="arrow-right"
        type="MaterialCommunityIcons"
      />
    </Styled(Button)>
  </Styled(FooterTab)>
</Styled(Footer)>
`;
